-Upgrade language to Java 11 standards -Improvement to process (plan mode, models)